<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="?android:attr/colorBackground">
    <!-- Custom Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="?attr/colorAccent"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/colorAccent"
            android:textSize="23sp"
            android:theme="@style/MainToolbarTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_sign_up"
            android:textColor="?attr/colorAccent"
            android:textSize="23sp"
            android:theme="@style/OtherToolbarTheme" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_signUp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="20dp"
                app:civ_border_color="#009688"
                app:civ_border_width="2dp"
                android:layout_gravity="center"
                android:src="@android:color/darker_gray" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_signUp_name"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_signUp_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/nama"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_signUp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_signUp_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_signUp_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_signUp_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_signUp_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_signUp_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/raleway_medium"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_signUp_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_signUp_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_signUp_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_signUp_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/country"
                    android:fontFamily="@font/raleway_medium"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/cancel"
                    android:fontFamily="@font/raleway_medium"
                    android:textSize="16sp"
                    android:layout_gravity="center" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/submit"
                    android:fontFamily="@font/raleway_medium"
                    android:textSize="16sp"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>