<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tubespbp.petshop.ui.shoppingCart.CheckoutFragment">

    <data>
        <variable
            name="user"
            type="com.tubespbp.petshop.ui.profile.model.User"/>
        <variable
            name="imgProfile"
            type="String" />
    </data>

    <FrameLayout
        android:id="@+id/fl_checkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="?android:attr/colorBackground">

    <!-- Custom Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="?attr/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?attr/colorAccent"
                android:textSize="23sp"
                android:theme="@style/MainToolbarTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_cart"
                android:textColor="?attr/colorAccent"
                android:textSize="23sp"
                android:theme="@style/OtherToolbarTheme" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_checkoutreceipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/checkoutreceipt"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_pawhubreceipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/pawhubpetstore"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_checkoutreceipt" />

                <LinearLayout
                    android:id="@+id/fl_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_pawhubreceipt"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_customertext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/customername"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/tv_customername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@{user.fullName}"
                        tools:text="Full Name"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_customertext" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/fl_customer"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_namaItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Product Name"
                        android:text="@string/productname"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_valueItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="105dp"
                        android:text="@string/qty"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Qty" />

                    <TextView
                        android:id="@+id/tv_totalItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Price"
                        android:text="@string/price"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_details"
                    tools:listitem="@layout/item_checkout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/rv_checkout"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_totalpricetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Total"
                        android:text="@string/total"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_totalcurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rp. "
                        android:text="@string/currency"
                        app:layout_constraintEnd_toStartOf="@id/tv_totalprice"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_totalprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,000,000,000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/constraint_total"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancelBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:layout_margin="10dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confirmBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:layout_margin="10dp"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>