<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tubespbp.petshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_catalogFragment2"
            app:destination="@id/catalogFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tubespbp.petshop.ui.shoppingCart.ShoppingCartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_shopping_cart">
        <action
            android:id="@+id/action_navigation_cart_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tubespbp.petshop.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_notifications_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/catalogFragment"
        android:name="com.tubespbp.petshop.ui.home.catalog.CatalogFragment"
        android:label="CatalogFragment"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.tubespbp.petshop.ui.shoppingCart.CheckoutFragment"
        android:label="CheckoutFragment"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_checkoutFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.tubespbp.petshop.ui.profile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
</navigation>