
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.shoppingCart.ShoppingCartFragment">
    <!-- Custom Toolbar -->
    <FrameLayout
        android:background="?android:attr/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="?attr/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?attr/colorAccent"
                android:textSize="23sp"
                android:theme="@style/MainToolbarTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_cart"
                android:textColor="?attr/colorAccent"
                android:textSize="23sp"
                android:theme="@style/OtherToolbarTheme" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_shoppingCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/shopping_cart_normal"
                android:textAlignment="center"
                android:textColor="?attr/colorAccent"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_follow"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_shoppingCart"
                tools:listitem="@layout/item_cart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_out"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_follow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>